Removed chart title and base headers

--- a/dipp/templates/dipp/base.html
+++ b/dipp/templates/dipp/base.html
@@ -81,7 +81,7 @@
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
+            <!-- <h6 class="collapse-header">Custom Components:</h6> -->
             <a class="collapse-item" href="{% url 'add_dept' %}">Add department</a>
             <a class="collapse-item" href="{% url 'add_sh' %}">Add Stakeholders</a>
           </div>
@@ -96,7 +96,7 @@
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
+            <!-- <h6 class="collapse-header">Custom Utilities:</h6> -->
             <div><a class="collapse-item block" href="{% url 'add_monitory_meeting' %}" >Add</a></div>
             <div><a class="collapse-item" href="{% url 'view_upcoming_meetings_action' %}">Upcoming Meetings</a></div>
             <a class="collapse-item" href="{% url 'view_prev_meeting' %}">Previous Meetings</a>
@@ -121,10 +121,10 @@
         </a>
         <div id="collapsePages0" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
+            <!-- <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'add_meeting' %}">Plan a meeting </a>
             <a class="collapse-item" href="{% url 'view_upcoming_normalmeetings' %}">Upcoming Meetings</a>
-            <a class="collapse-item" href="{% url 'view_prev_normalmeeting' %}">Previous Meetings with minutes</a>
+            <a class="collapse-item" href="{% url 'view_prev_normalmeeting' %}">Previous Meetings</a>
           </div>
         </div>
       </li>
@@ -136,7 +136,7 @@
         </a>
         <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
+            <!-- <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'add_status_report' %}"><i class="fa fa-asterisk fa-fw"></i>Add Status report</a>
             <a class="collapse-item" href="{% url 'view_status_report' %}"><i class="fa fa-asterisk fa-fw"></i>View Status report</a>
           </div>
@@ -149,7 +149,7 @@
         </a>
         <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
+            <!-- <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'notify' %}">Notify</a>
             <a class="collapse-item" href="{% url 'view_notification' %}">View Notifications</a>
           </div>
@@ -162,7 +162,7 @@
         </a>
         <div id="collapsePages3" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
+            <!-- <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'add_target' %}">Add Target</a>
             <a class="collapse-item" href="{% url 'view_past_target' %}">View Past Targets</a>
             <a class="collapse-item" href="{% url 'view_current_target' %}">View Current Targets</a>
@@ -199,12 +199,12 @@
         </a>
         <div id="collapsePages4" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
+            <!-- <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'view_target_analysis' %}">Target wise</a>
             <a class="collapse-item" href="{% url 'view_achievement_analysis' %}">Achievement/Delay wise</a>
             <a class="collapse-item" href="{% url 'view_feedback_analysis' %}">Feedback wise</a>
             <div class="collapse-divider"></div>
-            <h6 class="collapse-header">Other Pages:</h6>
+            <!-- <h6 class="collapse-header">Other Pages:</h6> -->
             <a class="collapse-item" href="{% url 'view_ap_analysis' %}">ActionPoint wise</a>
             <a class="collapse-item" href="{% url 'view_comparision_analysis' %}">Comaprision</a>
           </div>
