--- a/dipp/templates/dipp/home.html
+++ b/dipp/templates/dipp/home.html
@@ -3,100 +3,93 @@
 
 
 {% block content %}
-<div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">STAKEHOLDER NAME</h1>
-            </div>
-            <br>
-            <br>
-            <!-- /.col-lg-12 -->
-        </div>
 
-        <div class="row">
-              <!--collapse for action points-->
-
-        <div class="col-lg-8">
-          <h3>Action Points</h3>
+            
+                  
           <br>
-          <ul>
-          {% for m,val,j,k in main %}
-          <li>
-              <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="{{j}}">
-                  {{val.action_name}}</a>
-                </h4>
-              </div>
-              <div id="{{k}}" class="panel-collapse collapse">
-                <div class="panel-body">
 
-                  <h4>Objective:</h4>
-                  <label >{{val.action_objective}}</label>
-                  <h4>Description:</h4>
-                  <label >{{val.action_description}}     </label>
+        <div class="container">
+            <div class="row d-flex ">
 
-                  <div class="row">
-                      <div class="col-lg-12">
-                          <div class="panel panel-default">
-                              <div class="panel-heading">
-                                   Targets assigned and achieved for this action point
-                              </div>
-                              <!-- /.panel-heading -->
-                              <div class="panel-body">
-                                  <div class="table-responsive">
-                                      <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                          <thead>
-                                              <tr>
-                                                <th>Department</th>
-                                                <th>Target Assigned</th>
-                                                <th>Target fulfilled</th>
-                                                <th>Achievements</th>
-                                                <th>Dealy</th>
-                                              </tr>
-                                          </thead>
-                                          <tbody>
-                                            {% for i in m %}
-                                              <tr class="odd gradeX">
-                                                    <td>{{i.0}}</td>
-                                                    <td>{{i.1}}</td>
-                                                    <td>{{i.2}}</td>
-                                                    <td>{{i.3}}</td>
-                                                    <td>{{i.4}}</td>
-                                                  </tr>
-                                                {% endfor %}
-                                           </tbody>
-                                      </table>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </div>
+                <div class="col-lg-8">
 
+                        <div class="col-lg-8">
+                                <h1 class="page-header">Action Points</h1>
+                            </div>
+            <br>
+            <br>  
 
-                  <label>Last Updated on {{val.update_time}}</label><br>
+          <ul class="">
+
+         {% for m,val,j,k in main %}
+            <div id="accordion">
+                <div class="card">
+                  <div class="card-header">
+                    <h5>
+                      <a href="{{j}}" data-parent="#accordion" data-toggle="collapse">
+                        {{val.action_name}}
+                      </a>
+                    </h5>
+                  </div>
+          
+                  <div id="{{k}}" class="collapse">
+                    <div class="card-body">
+                        <h4>Objective:</h4>
+                        <p class="card-text">{{val.action_objective}}</p>
+                        <h4>Description:</h4>
+                        <p class="card-text" >{{val.action_description}}</p>
+                    
+                                
+                    <p class="card-text"><h5>Targets assigned and achieved for this action point</h5></p>
+                                
+                                
+                                <div class="card-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                            <thead>
+                                                <tr>
+                                                  <th>Department</th>
+                                                  <th>Target Assigned</th>
+                                                  <th>Target fulfilled</th>
+                                                  <th>Achievements</th>
+                                                  <th>Dealy</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                              {% for i in m %}
+                                                <tr class="odd gradeX">
+                                                      <td>{{i.0}}</td>
+                                                      <td>{{i.1}}</td>
+                                                      <td>{{i.2}}</td>
+                                                      <td>{{i.3}}</td>
+                                                      <td>{{i.4}}</td>
+                                                    </tr>
+                                                  {% endfor %}
+                                             </tbody>
+                                        </table>
+                                    </div>
+                                    </div>
+                                    </div>
+                                    </div>
+  
+                  </div>
                 </div>
-              </div>
-              </div>
-            </div>
 
-
-      </li>
-    {% endfor %}
-    </ul>
+                {% endfor %}
+            
+            </ul>
         </div>
 
-          <!--notifications-->
+            
+   
+         <!--notifications-->
           <div class="col-lg-4">
-                  <div class="panel panel-default">
-                      <div class="panel-heading">
-                          <i class="fa fa-bell fa-fw"></i> Notifications Panel
+                  <div class="card card-default">
+                      <div class="card-heading">
+                          <i class="fa fa-bell fa-fw"></i> Notifications card
                       </div>
-                      <!-- /.panel-heading -->
-                      <div class="panel-body">
+                      <!-- /.card-heading -->
+                      <div class="card-body">
                           <div class="list-group">
                               <a href="#" class="list-group-item">
                                   <i class="fa fa-comment fa-fw"></i> New Comment
@@ -147,13 +140,15 @@
                           <!-- /.list-group -->
                           <a href="#" class="btn btn-default btn-block">View All Alerts</a>
                       </div>
-                      <!-- /.panel-body -->
+                      <!-- /.card-body -->
                   </div>
 
           <!-- end notificatioon-->
 
         </div>
-        </div>
+     
+    </div>
+
 
 
   {% endblock %}
