--- a/stk_hld/templates/stk_hld/base.html
+++ b/stk_hld/templates/stk_hld/base.html
@@ -60,7 +60,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'dept_home' %}">
+        <a class="nav-link" href="{% url 'stk_hld_home' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
