--- a/dipp/templates/dipp/view_target_analysis.html
+++ b/dipp/templates/dipp/view_target_analysis.html
@@ -1,62 +1,17 @@
 {% extends "dipp/base.html" %}
 {% load static %}
-
-
 {% block content %}
 <div id="page-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1 class="page-header">Analysis of Targets</h1>
-                        </div>
-                        <!-- /.col-lg-12 -->
-                    </div>
-                    <!-- /.row -->
-                  </div>
-                  <div id="container"></div>
-                </div>
+<div class="container-fluid ">
 
+  <script type="text/javascript" src="{% static 'dept/fusioncharts/js/fusioncharts.js' %}"></script>
+  <script type="text/javascript" src="{% static 'dept/fusioncharts/js/themes/fusioncharts.theme.fusion.js' %}"></script>
 
-
-
-
-<!-- <script src="https://code.highcharts.com/highcharts.src.js"></script> -->
-{% endblock %}
-{% block datatable_add %}
-
-<script src = "{% static 'dipp/highcharts/highcharts.js' %}"></script>
-
-<!-- <script src="https://code.highcharts.com/highcharts.src.js"></script> -->
-
-<script>
-  Highcharts.chart('container', {
-      chart: {
-          type: 'column'
-      },
-      title: {
-          text: 'Targets'
-      },
-      xAxis: {
-          categories: [
-            {% for entry in dataset %}'{{ entry.department }} Department'{% if not forloop.last %}, {% endif %}{% endfor %}
-          ]
-      },
-      series: [{
-          name: 'Completed',
-          data: [
-            {% for entry in dataset %}{{ entry.completed_count }}{% if not forloop.last %}, {% endif %}{% endfor %}
-          ],
-          color: 'green'
-      }, {
-          name: 'Not Completed',
-          data: [
-            {% for entry in dataset %}{{ entry.not_completed_count }}{% if not forloop.last %}, {% endif %}{% endfor %}
-          ],
-          color: 'red'
-      }],
-      credits: {
-      enabled: false
-      },
-  });
-</script>
+<div class="text-center">
+<!--body style="font-family:'Helvetica Neue', Arial; font-size: 16px;"-->
+	<h3>{{ chartTitle|safe }}</h3>
+	<div id="chart-1">{{ output|safe }}</div>
+</div>
+</div>
+</div>
 {% endblock %}
