--- a/dipp/templates/dipp/add_meeting.html
+++ b/dipp/templates/dipp/add_meeting.html
@@ -42,7 +42,7 @@
               <textarea name="desc" class="form-control" rows="8" cols="80" type="text" placeholder="enter Subject"  name="m_subject" required></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="submit" class="btn text-white btn-block bg-gradient-primary">Add</button>
     </form>
 
     <!-- end form-->
