--- a/dipp/templates/dipp/add_status_report.html
+++ b/dipp/templates/dipp/add_status_report.html
@@ -23,11 +23,12 @@
 
           <div class="form-group" >
               <label>Subject of meeting</label>
-              <input class="form-control" type="file" placeholder="enter Subject" name="myfile" required>
+              
+                <input class="form-control block" type="file" placeholder="enter Subject" name="myfile" required>
           </div>
 
 
-          <button type="submit" class="btn btn-default">Add</button>
+          <button type="submit" class="btn btn-block text-white align-middle bg-gradient-primary">Add</button>
     </form>
 </div>
     <!-- end form-->
