--- a/dipp/templates/dipp/notify.html
+++ b/dipp/templates/dipp/notify.html
@@ -42,7 +42,7 @@
               <textarea name="desc" class="form-control" rows="8" cols="80" type="text" placeholder="enter Description"    required></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="submit" class="btn btn-block text-white align-middle bg-gradient-primary">Add</button>
     </form>
 </div>
     <!-- end form-->
