--- a/dipp/templates/dipp/add_monitory_meeting.html
+++ b/dipp/templates/dipp/add_monitory_meeting.html
@@ -31,7 +31,7 @@
               <textarea name="desc" class="form-control" rows="8" cols="80" type="text" placeholder="enter Subject" name="m_subject" required></textarea>   r
           </div>
 
-          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="submit" class="btn btn-block text-white align-middle bg-gradient-primary">Add</button>
     </form>
     </div>
 
