--- a/dipp/templates/dipp/add_sh.html
+++ b/dipp/templates/dipp/add_sh.html
@@ -34,7 +34,7 @@
               <label>StakeHolder Password</label>
               <input required class="form-control" type="password" placeholder="enter password"   name="sh_password">
           </div>
-          <button type="submit" class="btn btn-default">Add</button>
+          <button type="submit" class="btn btn-block text-white align-middle bg-gradient-primary">Add</button>
     </form>
 </div>
     <!-- end form-->
