--- a/dipp/templates/dipp/add_target.html
+++ b/dipp/templates/dipp/add_target.html
@@ -43,7 +43,7 @@
           </div>
 
 
-          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="submit" class="btn btn-block text-white align-middle bg-gradient-primary">Add</button>
     </form>
 </div>
     <!-- end form-->
