--- a/dipp/templates/dipp/home.html
+++ b/dipp/templates/dipp/home.html
@@ -13,7 +13,7 @@
 
                 <div class="col-lg-8">
 
-                        <div class="col-lg-8">
+                        <div class="d-flex justify-content-center">
                                 <h1 class="page-header">Action Points</h1>
                             </div>
             <br>
@@ -22,7 +22,7 @@
           <ul class="">
 
          {% for m,val,j,k in main %}
-            <div id="accordion">
+            <div id="accordion" class="rah">
                 <div class="card">
                   <div class="card-header">
                     <h5>
@@ -47,12 +47,12 @@
                                     <div class="table-responsive">
                                         <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                             <thead>
-                                                <tr>
+                                                <tr class="bg-gradient-primary text-white">
                                                   <th>Department</th>
                                                   <th>Target Assigned</th>
                                                   <th>Target fulfilled</th>
                                                   <th>Achievements</th>
-                                                  <th>Dealy</th>
+                                                  <th>Delay</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -148,6 +148,10 @@
         </div>
      
     </div>
+
+
+
+
 
 
 
