minor chnages again

--- a/dipp/templates/dipp/base.html
+++ b/dipp/templates/dipp/base.html
@@ -280,10 +280,11 @@
                                 </div>
               </div>
             </li>
+            <!-- Removed download action points from here 
             <div class="nav-item mx-1">
               <a class="nav-link" href="{% url 'download_ap' %}" target="_blank"><span class="text-primary">Download Action Points</span></a>
             </div>
-
+          -->
             <!-- Nav Item - Alerts -->
             <li class="nav-item dropdown no-arrow mx-1">
               <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
