--- a/dipp/templates/dipp/home.html
+++ b/dipp/templates/dipp/home.html
@@ -5,7 +5,10 @@
 {% block content %}
 
             
-                  
+<div class="nav-item mx-1">
+    <a class="nav-link" href="{% url 'download_ap_dipp' %}" target="_blank"><span class="text-primary">Download Action Points</span></a>
+  </div>
+
           <br>
 
         <div class="container">
