--- a/dipp/templates/dipp/prev_meetings.html
+++ b/dipp/templates/dipp/prev_meetings.html
@@ -7,7 +7,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="page-header">Happened meetings</h1>
+                            <h1 class="page-header">Past meetings</h1>
                         </div>
                         <!-- /.col-lg-12 -->
                     </div>
