automate progress report

--- a/dept/templates/dept/base.html
+++ b/dept/templates/dept/base.html
@@ -102,7 +102,7 @@
             <!-- <h6 class="collapse-header">Custom Utilities:</h6> -->
             <div><a class="collapse-item block" href="{% url 'view_upcoming_individual_meetings_action_dept' %}" >Individual Meetings</a></div>
             <div><a class="collapse-item" href="{% url 'view_prev_individual_meeting' %}">Minutes of Meetings</a></div>
-
+            <a class="collapse-item" href="{% url 'dept_auto_monthly_minute' %}">View generated minute</a>
           </div>
         </div>
       </li>
