--- a/dipp/templates/dipp/base.html
+++ b/dipp/templates/dipp/base.html
@@ -100,6 +100,7 @@
             <div><a class="collapse-item block" href="{% url 'add_monitory_meeting' %}" >Add</a></div>
             <div><a class="collapse-item" href="{% url 'view_upcoming_meetings_action' %}">Upcoming Meetings</a></div>
             <a class="collapse-item" href="{% url 'view_prev_meeting' %}">Previous Meetings</a>
+            <a class="collapse-item" href="{% url 'auto_monthly_minute' %}">View generated minute</a>
 
           </div>
         </div>
